--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -3,7 +3,7 @@ import "../styles/global.css";
 import Footer from "../components/Footer.astro";
 import Header from "../components/Header.astro";
 
-const pageTitle = "Home Page";
+const pageTitle = "Blog";
 ---
 
 <html lang="en">
@@ -16,7 +16,14 @@ const pageTitle = "Home Page";
   </head>
   <body>
     <Header />
+
     <h1>{pageTitle}</h1>
+
+    <ul>
+      <li><a href="/posts/post-1/">Post 1</a></li>
+      <li><a href="/posts/post-2/">Post 2</a></li>
+      <li><a href="/posts/post-3/">Post 3</a></li>
+    </ul>
     <Footer />
 
     <script>
